fixed footer being too low from content

--- a/test/src/scss/universal.scss
+++ b/test/src/scss/universal.scss
@@ -246,7 +246,7 @@ h4 {
 
 .content {
     margin-top: 5%;
-    margin-bottom: 5%;
+    margin-bottom: 0%;
     font-family: Lato, Roboto, Arial, sans-serif;
     margin-left: 10%;
     margin-right: 10%;
@@ -504,7 +504,7 @@ h4 {
     // align-self: center;
 }
 
-.footer .icon-col .footer-icon{
+.footer .icon-col .footer-icon {
     font-size: 40px;
     color: var(--footer-text-color);
 }
